--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@ FB.api('/me/scores', 'post', {
           message: 'I challenge you to Beat My score '+clicks+' on Best Clicker',
           title:'Challenge your friends'
          },callback);
+         showRank();
          return retVal;
 }
 
