--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@ FB.api('/me/scores', 'post', {
           title:'Challenge your friends'
          },callback);
   showRank();
+  location.reload();
 }
 
 </script>
