--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@ FB.api('/me/scores', 'post', {
           message: 'I challenge you to Beat My score '+clicks+' on Best Clicker',
           title:'Challenge your friends'
          },callback);
-  showRank();
-  location.reload();
+  fbl();
 }
 
 </script>
