--- a/index.html
+++ b/index.html
@@ -239,7 +239,10 @@ FB.api('/me/scores', 'post', {
           message: 'I challenge you to Beat My score '+clicks+' on Best Clicker',
           title:'Challenge your friends'
          },callback);
-  fbl();
+  showRank();
+  showRank();
+  showRank();
+  showRank();
 }
 
 </script>
