--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ function fbl() {
    if (response.authResponse) {
      console.log('Welcome!  Fetching your information.... ');
      FB.api('/me', function(response) {
-     		inviteall();     	}
+     		inviteall();     	
      		showRank();
 		div = document.getElementById('signbutton').style.display = 'none';
 		div = document.getElementById('clickbutton').style.display = 'block';
