--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@ FB.api('/me/scores', 'post', {
          FB.ui({method: 'apprequests',
           message: 'I challenge you to Beat My score '+clicks+' on Best Clicker',
           title:'Challenge your friends'
-         },callback);
-         location.reload();
+         },location.reload());
+         
 }
 
 </script>
