--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ function showRank(){
                    div = document.getElementById('rank10').innerHTML= '<b>10.'+friend.user.name+'</b><br/> Score :'+friend.score+'<br/>';
                 scnt++; });
                 console.log('Rank Made!');
+                scnt=1;
               }else {
                   console.log('Error');
                   }});
