--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ function challenge() {
 <input id="clicker" value="Your Score" style="display: inline; width:200px; height:50px; background-color:#2980b9;text-align:center; font-size:x-large; color:white;" type="button" >
 <input value="Submit!" style="display: inline; width:200px; height:50px; background-color:#e74c3c;text-align:center; font-size:x-large; color:white;" type="button" onclick="submitscore();">
 </div><br/>
-<input value="Challenge Friends" id="chall" style="display: none; width:200px; height:50px; background-color:#e74c3c;text-align:center; font-size:x-large; color:white;" type="button" onclick="challenge();">
+<input value="Challenge Friends" id="chall" style="display: none; width:300px; height:50px; background-color:rgba(0, 255, 225, 0.75); text-align:center; font-size:x-large; color:white;" type="button" onclick="challenge();">
 <br/><br/>
 HighBorgzZ | CEK | Lance 
 </center>
