--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ var flag=0;
 var div;
 
 function loading(){
+ div=document.getElementById('signbutton').value = "Login to Play!";
  showRank();
  fbl();
 }
@@ -104,7 +105,6 @@ function showRank(){
                 scnt=1;
               }else {
                   console.log('Error');
-                  document.getElementById('signbutton').value = "Login to Play!";
                   div = document.getElementById('leaderboard').style.display = 'none';
                   }});
 }                 
